# coursera-py

./: .gitmodules  networkedTechnology.py
coursera_py/: pyproject.toml
coursera_py/coursera_py/: README.md  networkedTechnology.py  regularExpressions.py
coursera_py/coursera_py/deanza_linux_class/: lab1.py  lab2.py  lab3.py  lab4.py  lab5.py  lab6.py  midterm.py  response.txt
coursera_py/coursera_py/google_py_interact_os/: classes.py  env_variables.py  hello.py  spider.txt  subprocess_practice.py  sys_module.py
coursera_py/coursera_py/option_project/: option_chain_scrape.py  pyproject.toml
schwab_api_demo/: pyproject.toml
schwab_api_demo/schwab_api_demo/: main.py
