[tool.poetry]
name = "schwab-api-demo"
version = "0.1.0"
description = ""
authors = ["gregtdeane <gregtd93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
schwabdev = "^2.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
