[tool.poetry]
name = "options-trades"
version = "0.1.0"
description = ""
authors = ["gregtdeane <gregtd93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.31.0"
pandas = "^2.2.0"
ipython = "^8.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
